logs/abt.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/abt'...
Listing './lib/python3.5/site-packages/abt/cli'...
Compiling './lib/python3.5/site-packages/abt/cli/__init__.py'...
***   File "./lib/python3.5/site-packages/abt/cli/__init__.py", line 24
    print "usage: %s <command> [<args>]" % progname
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/abt/cli/add.py'...
***   File "./lib/python3.5/site-packages/abt/cli/add.py", line 39
    print aria2.addTorrent(torrent_b64, [], options)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/abt/cli/option.py'...
***   File "./lib/python3.5/site-packages/abt/cli/option.py", line 16
    print "--%s=%s" % (k, v)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/abt/cli/pause.py'...
***   File "./lib/python3.5/site-packages/abt/cli/pause.py", line 19
    print aria2.pause(args.gid)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/abt/cli/rm.py'...
***   File "./lib/python3.5/site-packages/abt/cli/rm.py", line 28
    print aria2.removeDownloadResult(args.gid)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/abt/cli/start.py'...
***   File "./lib/python3.5/site-packages/abt/cli/start.py", line 19
    print aria2.unpause(args.gid)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/abt/cli/status.py'...
***   File "./lib/python3.5/site-packages/abt/cli/status.py", line 17
    print "aria2 ({numActive} active, {numWaiting} waiting, {numStopped} stopped)".format(**summary)
                                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/abt-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/better_bencode'...
Listing './lib/python3.5/site-packages/better_bencode-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/humanize'...
Listing './lib/python3.5/site-packages/humanize/locale'...
Listing './lib/python3.5/site-packages/humanize/locale/fr_FR'...
Listing './lib/python3.5/site-packages/humanize/locale/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize/locale/ko_KR'...
Listing './lib/python3.5/site-packages/humanize/locale/ko_KR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize/locale/ru_RU'...
Listing './lib/python3.5/site-packages/humanize/locale/ru_RU/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/jsonrpclib'...
Compiling './lib/python3.5/site-packages/jsonrpclib/SimpleJSONRPCServer.py'...
***   File "./lib/python3.5/site-packages/jsonrpclib/SimpleJSONRPCServer.py", line 62
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonrpclib-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
